Box select channels in dope sheet doesn't select corresponding bones in rig. #38737

Closed
opened 2014-02-21 07:05:46 +01:00 by Stephen Hamacek · 8 comments

System Information
Operating system and graphics card

Mac 10.8.5, GTX 660 3072 MB

Blender Version
Broken:hash 1c866c3
Worked: (optional)

Short description of error

A fairly recent build added the feature of selecting corresponding bone when selecting its channel in dope sheet (pose mode). This is brilliant and so much help.

Issue is that selecting individual or shift-selecting channels works as above, but doesn't work when box selecting channels by leftclick-dragging across names in DS. Would be a useful speedup for sure.

Sorry this is possibly more feature-request than bug...

Exact steps for others to reproduce the error

  • load or link any rigged character
  • keyframe pose
  • compare shift select channels in Dope Sheet, to click-drag select channels.

Thanks!

**System Information** Operating system and graphics card Mac 10.8.5, GTX 660 3072 MB **Blender Version** Broken:hash 1c866c3 Worked: (optional) **Short description of error** A fairly recent build added the feature of selecting corresponding bone when selecting its channel in dope sheet (pose mode). This is brilliant and so much help. Issue is that selecting individual or shift-selecting channels works as above, but doesn't work when box selecting channels by leftclick-dragging across names in DS. Would be a useful speedup for sure. Sorry this is possibly more feature-request than bug... **Exact steps for others to reproduce the error** - load or link any rigged character - keyframe pose - compare shift select channels in Dope Sheet, to click-drag select channels. Thanks!

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @StephenHamacek

Added subscriber: @StephenHamacek
Joshua Leung self-assigned this 2014-02-21 12:34:51 +01:00
Member

Assigning to self. Although this borders more on being a feature request, it's not too much of a stretch to add support for this.

Assigning to self. Although this borders more on being a feature request, it's not too much of a stretch to add support for this.

This issue was referenced by blender/blender-addons-contrib@4ff3ec835e

This issue was referenced by blender/blender-addons-contrib@4ff3ec835e321747880456e33cce261422bc05a7

This issue was referenced by 4ff3ec835e

This issue was referenced by 4ff3ec835e321747880456e33cce261422bc05a7
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 4ff3ec835e.

Closed by commit 4ff3ec835e.

Thanks so much aligorith!

Thanks so much aligorith!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38737
No description provided.