Fix T38737: Box select channels in dope sheet doesn't select corresponding bones in rig